--- a/.env
+++ b/.env
@@ -2,8 +2,8 @@ NODE_ENV=development
 PORT=3000
 
 DB_HOST=localhost
-DB_USERNAME=root
+DB_USERNAME=postgres
 DB_PORT=5432
-DB_PASSWORD=123456
-DB_DATABASE=document_generator
+DB_PASSWORD=postgres
+DB_DATABASE=nestjs-base
 DB_SYNCHRONIZE=1
