--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
     "test:e2e": "jest --config ./test/jest-e2e.json"
+    
   },
   "dependencies": {
     "@nestjs/axios": "^0.0.7",
@@ -32,13 +33,10 @@
     "class-validator": "^0.13.2",
     "dayjs": "^1.11.2",
     "dotenv": "^16.0.1",
-    "handlebars": "^4.7.7",
-    "lint-staged": "^12.4.1",
     "nestjs-i18n": "^9.0.12",
     "nestjs-pino": "^2.5.2",
     "pg": "^8.7.3",
     "pino-http": "^7.0.0",
-    "puppeteer": "^14.0.0",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
     "rxjs": "^7.2.0",
@@ -46,8 +44,8 @@
     "typeorm": "^0.2.45"
   },
   "devDependencies": {
-    "@commitlint/cli": "^16.2.4",
-    "@commitlint/config-conventional": "^16.2.4",
+    "@commitlint/cli": "^17.0.2",
+    "@commitlint/config-conventional": "^17.0.2",
     "@nestjs/cli": "^8.0.0",
     "@nestjs/schematics": "^8.0.0",
     "@nestjs/testing": "^8.0.0",
@@ -63,6 +61,7 @@
     "eslint-plugin-unused-imports": "^2.0.0",
     "husky": "^8.0.0",
     "jest": "^27.2.5",
+    "lint-staged": "^13.0.0",
     "pino-pretty": "^7.6.1",
     "prettier": "^2.3.2",
     "source-map-support": "^0.5.20",
@@ -89,5 +88,12 @@
     ],
     "coverageDirectory": "../coverage",
     "testEnvironment": "node"
+  },
+  "lint-staged": {
+    "*.ts": [
+      "npm run lint",
+      "npm run format",
+      "git add ."
+    ]
   }
 }
